Fixed incorrect htlm break (br) elements

--- a/html-templates/dialogs/set-password.html
+++ b/html-templates/dialogs/set-password.html
@@ -8,7 +8,7 @@
 					<td><input class="new-password" type="password" name="newPassword" placeholder="New password.." ></td>
 				</tr>
 				<tr>
-					<td><label for="newPasswordRetyped">New Password</br>Retyped</label></td>
+					<td><label for="newPasswordRetyped">New Password<br>Retyped</label></td>
 					<td><input class="new-password-retyped" type="password" name="newPasswordRetyped" placeholder="New password.." required></td>
 				</tr>
 			</table>
