--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <div id='scrollable'>
     <header>
-      <div id='title' class="clickable" onclick='window.portfolio_router_navigateRoute("/")'>Josh Bacon</br>Full-Stack</br>Engineer</div>
+      <div id='title' class="clickable" onclick='window.portfolio_router_navigateRoute("/")'>Josh Bacon<br>Full-Stack<br>Engineer</div>
 	    <div id='user-bar-area'>
 	      <nav>
 	        <span id="user-bar-greeting" class="hidden">Hello</span>
